web/css/main.css
/* ... */
#inner #page-content {
    margin: 6px;
    padding: 5px;
    margin-bottom: 62px;
    min-height: 155px;
}

#inner #page-content .container-fluid {
    padding-left: 10px;
    margin-bottom: 20px; background-color: #fff; border: 1px solid transparent; border-radius: 2px; 
    border-color: #ddd; -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05); box-shadow: 0 1px 1px rgba(0,0,0,.05);
}

#inner #page-content .container-fluid .breadcrumb {
    margin: 0 0 10px 0;
}

#inner #page-content .container-fluid .inner-body {
    padding: 20px 0 10px 10px;
}

#inner #page-content h2 {
    font-size: 18px;
    color: rgb(119, 119, 119);
    font-weight: normal;
    margin: 0 0 30px 0;
    border-bottom: 1px solid #DFDFDF;
}
#inner #page-content #top-nav {
    margin: -68px 0 0 0;
    float: right;    
}
#inner #page-content #top-nav li a {
    padding-top: 0;
    padding-bottom: 0;
}
#inner #page-content #top-nav li:last-child a {
    margin: 6px 0 0 0;
    border: none;
}
#inner #page-content #top-nav li form {
    margin: 0;
}
#inner #page-content #top-nav li form .well {
    background: none;
    min-height: 0;
    margin: 0;
    padding: 0;
    border: 0;
    border-radius: 0;
    -webkit-box-shadow: none;
    -moz-box-shadow: none
    box-shadow: none;
}
#inner #page-content #top-nav li form button {
    background: none;
    color: #818181;
    line-height: 20px;
    padding: 8px;
    font-size: 13px;
    border: 1px solid transparent;
}
#inner #page-content #top-nav li form button:hover {
    color: black;
}
.icone-ftp{
    height: 30px;
}

.widget-header {
    list-style: none;
    margin: 12px;
    padding: 0;
    margin-bottom: 20px;
    background: #Fff;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
    box-shadow: 0 1px 1px rgba(0,0,0,0.05);
}
.widget-header li {
    display: inline-block;
    padding: 0;
    font-size: 12px;
    color: #666;
}
.widget-header a.active {
    background-color: #00a2d9;
    color: #fff !important;
    text-decoration: none;
    padding: 14px 15px 4px 20px;
}
.widget-header li a {
    padding: 10px 15px 8px 20px;
    display: inline-block;
    border-right: 1px solid #EEE;
    margin-right: -5px;
}
.widget-header li:hover a.active, .widget-header a.active:hover {
    color: #2a6496;
    text-decoration: underline;
}
.widget-header li:hover a {
    background-color: #008fc0;
    color: #fff;
    cursor: pointer;
}
.widget-header .pull-right form {
    margin: 0px 0 0 0;
    padding: 0px 0px 0px 0px;
    background-color: #E43232; 
}
.widget-header .pull-right  form button{
    border: none;
    padding: 14px 15px 14px 20px;
    display: inline-block;
    color: #EEE;
    background: none;
    border: none;
}
.widget-header .pull-right  form button:hover{
    background: #CF2A2A;
    color: #fff;
    cursor: pointer;
}
footer {
    padding: 3px 0;
    width: 100%;
    /* position: absolute;
    bottom: 0; */
}
footer p {
    text-align: center;
    color: #818181;
    font-size: 11px;
    margin: 10px 0;
}
footer p a:hover {
    color: white;
    opacity: 0.85;
}

#inner #page-content ul {
    margin-top: 0;
    margin-bottom: 0;
}

/* Formulaires */
.form-group, form {
    margin: 15px 0 0 0;
}
form .form-actions {
    padding: 20px 0 20px 20px; background: #DDD; 
    margin: 20px -18px 0 -18px;
}
form.form-edit .form-actions.contain-delete button {
    display: block;
    float: left;
    margin-left: 15px;
}
form.form-edit .form-actions.contain-delete button:first-of-type {
    margin-left: 0;
}
label {	
    font-family: 'Yanone Kaffeesatz', arial, sans-serif;
    font-size: 16px;
    color: #666; 
    width: 250px;
    display: block;
    float: left;
}
.form-align {
    display: inline;
}
input[type="radio"], 
input[type="checkbox"] {
    margin: 4px 5px 0;
    float: left;
    clear: both;
}
label + input[type="radio"], 
label + input[type="checkbox"] {
    clear: none;
}
 
input[type="radio"] + label, 
input[type="checkbox"] + label {
    width: auto;
    margin: 0 20px 0 5px;
}
input[type="radio"] + label > .symfony-form-required, 
/* input[type="radio"] + label > span:last-of-type, */ 
input[type="checkbox"] + label > .symfony-form-required/*, 
 input[type="checkbox"] + label > span:last-of-type */ {
    display: none;
} 

.form-group {
    padding: 20px 0 20px 20px;
    background: #DDD;
    margin: -1px -18px 0 -18px;
}
.form-group form {
    margin: 0;
}
.form-group form.form-edit, 
.form-group form.form-delete {
    float: left;
}
.form-group form .form-actions {
    padding: 0;
    margin: 0;
    border-top: 0;
}
.form-group form.form-edit + form.form-delete, 
.form-group form.form-delete + form.form-delete {
    margin-left: 10px;
}

.template-server-cfg {
    width: 350px;
    height: 250px;
}

form ul[id*="roles"].unstyled li label {
    width: auto;
    float: none;
}

form table.records_list .batch-selector {
    width: 24px;
}

form table.records_list tfoot select {
    width: auto;
}

.dp-security-roles {
    margin-left: 80px;
}

table .btn-group a.btn {
    margin-bottom: 0;
}
table.table th,
table.table td {
    vertical-align: middle;
}
.btn-label {
    position: relative;
    left: -12px;
    display: inline-block;
    padding: 6px 12px;
    background: rgba(0,0,0,0.15);
    border-radius: 3px 0 0 3px;
}
.btn-labeled {
    padding-top: 0;
    padding-bottom: 0;
}
.btn {
    margin-bottom:10px;
    border-width: 0 1px 2px 1px;
    font-size: 12px !important;
}

.btn-primary { color: #ffffff; background: #106D91; border: none;}
.btn-primary:hover, .btn-primary:focus, .btn-group.open .dropdown-toggle.btn-primary { background-color: #18799E !important; }

.btn-danger { color: #ffffff; background: #E2534A; border: none; }
.btn-danger:hover, .btn-danger:active, .btn-danger.active, .btn-danger.disabled, .btn-danger[disabled] { color: #fff; background: #D44B45; }

.btn-success { color: #ffffff; background: #18971C; border: none; }
/* ... */

